Tweak all mentions of Boston Python.

--- a/studygroup/templates/index.html
+++ b/studygroup/templates/index.html
@@ -25,7 +25,7 @@
             <h1>Studygroup</h1>
 
             <p class="lead">
-                Create and manage small groups inside the Boston Python Usergroup
+                Create and manage small study groups inside Boston Python
             </p>
 
             {% if not g.user %}
@@ -78,7 +78,7 @@
         </div>
 
         <div class="footer">
-            <p>&copy; Boston Python Usergroup 2014</p>
+            <p>&copy; <a href="http://bostonpython.com">Boston Python</a> User Group 2014</p>
         </div>
 
     </div> <!-- /container -->
