--- a/studygroup/templates/show_group.html
+++ b/studygroup/templates/show_group.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="footer">
-            <p>&copy; Boston Python Usergroup 2014</p>
+            <p>&copy; <a href="http://bostonpython.com">Boston Python</a> User Group 2014</p>
         </div>
 
     </div> <!-- /container -->
