Nibbling around the edges.

--- a/studygroup/templates/groups.html
+++ b/studygroup/templates/groups.html
@@ -36,7 +36,7 @@
                     <h4>No groups</h4>
                     <a href="{{ url_for('new_group') }}"
                        class="btn btn-primary btn-lg active"
-                       role="button">Create a Studygroup</a>
+                       role="button">Propose a Study Group</a>
                 {% endfor %}
             </div>
         </div>
