--- a/studygroup/templates/groups.html
+++ b/studygroup/templates/groups.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div class="header">
             <ul class="nav nav-pills pull-right">
-                <li><a href="{{ url_for('studygroup.index') }}">Home</a></li>
+                <li><a href="{{ url_for('.index') }}">Home</a></li>
                 <li class="active"><a href="#">Groups</a></li>
-                <li><a href="{{ url_for('studygroup.show_members') }}">Members</a></li>
+                <li><a href="{{ url_for('.show_members') }}">Members</a></li>
                 {% if g.user %}
-                <li><a href="{{ url_for('studygroup.logout') }}">Logout</a></li>
+                <li><a href="{{ url_for('.logout') }}">Logout</a></li>
                 {% endif %}
             </ul>
             <h3 class="text-muted">Studygroup</h3>
@@ -23,18 +23,18 @@
 
         <div class="page-header">
             <h1>Groups <a class="btn btn-default pull-right" role="button"
-                          href="{{ url_for('studygroup.new_group') }}">New Group +</a></h1>
+                          href="{{ url_for('.new_group') }}">New Group +</a></h1>
         </div>
 
         <div class="row marketing">
             <div class="col-lg-12">
                 {% for group in g.groups %}
-                <h4><a href="{{ url_for('studygroup.show_group', id=group.id) }}">{{ group.name }}</a></h4>
+                <h4><a href="{{ url_for('.show_group', id=group.id) }}">{{ group.name }}</a></h4>
                 <p>Members: {{ group.memberships | length }}</p>
                 <p>{{ group.description }}</p>
                 {% else %}
                     <h4>No groups</h4>
-                    <a href="{{ url_for('studygroup.new_group') }}"
+                    <a href="{{ url_for('.new_group') }}"
                        class="btn btn-primary btn-lg active"
                        role="button">Propose a Study Group</a>
                 {% endfor %}
