--- a/studygroup/templates/members.html
+++ b/studygroup/templates/members.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div class="header">
             <ul class="nav nav-pills pull-right">
-                <li><a href="{{ url_for('studygroup.index') }}">Home</a></li>
-                <li><a href="{{ url_for('studygroup.show_groups') }}">Groups</a></li>
+                <li><a href="{{ url_for('.index') }}">Home</a></li>
+                <li><a href="{{ url_for('.show_groups') }}">Groups</a></li>
                 <li class="active"><a href="#">Members</a></li>
                 {% if g.user %}
-                <li><a href="{{ url_for('studygroup.logout') }}">Logout</a></li>
+                <li><a href="{{ url_for('.logout') }}">Logout</a></li>
                 {% endif %}
             </ul>
             <h3 class="text-muted">Studygroup</h3>
