--- a/studygroup/templates/index.html
+++ b/studygroup/templates/index.html
@@ -6,10 +6,10 @@
         <div class="header">
             <ul class="nav nav-pills pull-right">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="{{ url_for('.show_groups') }}">Groups</a></li>
-                <li><a href="{{ url_for('.show_members') }}">Members</a></li>
+                <li><a href="{{ url_for('group.show_groups') }}">Groups</a></li>
+                <li><a href="{{ url_for('studygroup.show_members') }}">Members</a></li>
                 {% if g.user %}
-                <li><a href="{{ url_for('.logout') }}">Logout</a></li>
+                <li><a href="{{ url_for('studygroup.logout') }}">Logout</a></li>
                 {% endif %}
             </ul>
             <h3 class="text-muted">Studygroup</h3>
@@ -25,7 +25,7 @@
             {% if not g.user %}
             <p>
                 <a class="btn btn-lg btn-success"
-                   href="{{ url_for('.login') }}"
+                   href="{{ url_for('studygroup.login') }}"
                    role="button">Sign In Now</a>
             </p>
             {% else %}
@@ -37,7 +37,7 @@
 
         <div class="row marketing">
             <div class="col-lg-6">
-                <h4>Subheading</h4>
+                <h4></h4>
 
                 <p>Donec id elit non mi porta gravida at eget metus. Maecenas
                     faucibus mollis interdum.</p>
@@ -53,22 +53,6 @@
                     magna.</p>
             </div>
 
-            <div class="col-lg-6">
-                <h4>Subheading</h4>
-
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas
-                    faucibus mollis interdum.</p>
-
-                <h4>Subheading</h4>
-
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
-                    Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h4>Subheading</h4>
-
-                <p>Maecenas sed diam eget risus varius blandit sit amet non
-                    magna.</p>
-            </div>
         </div>
 
         <div class="footer">
