--- a/studygroup/templates/index.html
+++ b/studygroup/templates/index.html
@@ -1,11 +1,5 @@
-{% extends "bootstrap/base.html" %}
+{% extends "base.html" %}
 {% block title %}Studygroup | a Boston Python Project{% endblock %}
-
-{% block styles %}
-{{super()}}
-<link rel="stylesheet"
-      href="{{url_for('.static', filename='css/jumbotron-narrow.css')}}">
-{% endblock %}
 
 {% block content %}
     <div class="container">
