--- a/studygroup/templates/new_group.html
+++ b/studygroup/templates/new_group.html
@@ -1,12 +1,6 @@
-{% extends "bootstrap/base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% extends "base.html" %}
+{% import "wtf_macro.html" as wtf %}
 {% block title %}Studygroup | Groups{% endblock %}
-
-{% block styles %}
-{{super()}}
-<link rel="stylesheet"
-      href="{{url_for('.static', filename='css/jumbotron-narrow.css')}}">
-{% endblock %}
 
 {% block content %}
     <div class="container">
@@ -30,10 +24,9 @@
             <div class="col-lg-12">
                 <form class="col-lg-12 form form-horizontal" method="post" role="form">
                     {{ form.hidden_tag() }}
-                    {{ wtf.form_errors(form, hiddens="only") }}
-                    {{ wtf.form_field(form.name) }}
-                    {{ wtf.form_field(form.description) }}
-                    {{ wtf.form_field(form.max_members) }}
+                    {{ wtf.render_field(form.name) }}
+                    {{ wtf.render_field(form.description) }}
+                    {{ wtf.render_field(form.max_members) }}
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
             </div>
