--- a/studygroup/templates/new_group.html
+++ b/studygroup/templates/new_group.html
@@ -27,6 +27,8 @@
                     {{ wtf.render_field(form.name) }}
                     {{ wtf.render_field(form.description) }}
                     {{ wtf.render_field(form.max_members) }}
+                    {{ wtf.render_field(form.start_date) }}
+                    {{ wtf.render_field(form.active) }}
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
             </div>
