--- a/studygroup/templates/base.html
+++ b/studygroup/templates/base.html
@@ -17,11 +17,15 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dev/css/bootstrap.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dev/css/font-awesome.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dev/css/jumbotron-narrow.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dev/css/bootstrap-datetimepicker.css') }}">
     {%- endblock styles %}
     <!-- Scripts -->
     {%- block scripts  %}
         <script src="{{ url_for('static', filename='dev/js/jquery.js') }}"></script>
         <script src="{{ url_for('static', filename='dev/js/bootstrap.js') }}"></script>
+        <script src="{{ url_for('static', filename='dev/js/moment.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='dev/js/bootstrap-datetimepicker.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='dev/js/app.js') }}"></script>
     {% endblock scripts -%}
 
     {%- endblock head %}
