--- a/studygroup/templates/base.html
+++ b/studygroup/templates/base.html
@@ -32,16 +32,34 @@
   </head>
   <body{% block body_attribs %}{% endblock body_attribs %}>
     {% block body -%}
-
-        {% block navbar %}
+    <div class="container">
+        {% block navbar -%}
+            <div class="header">
+                <ul class="nav nav-pills pull-right">
+                    <li><a href="{{ url_for('studygroup.index') }}">Home</a></li>
+                    <li><a href="{{ url_for('group.show_groups') }}">Groups</a></li>
+                    <li><a href="{{ url_for('studygroup.show_members') }}">Members</a></li>
+                    {% if g.user %}
+                    <li><a href="{{ url_for('studygroup.logout') }}">Logout</a></li>
+                    {% endif %}
+                </ul>
+                <h3 class="text-muted">Studygroup</h3>
+            </div>
         {%- endblock navbar %}
 
         {% block content -%}
+
         {%- endblock content %}
 
         {% block body_scripts %}
         {%- endblock body_scripts %}
 
+        {% block footer %}
+            <div class="footer">
+                <p>&copy; <a href="http://bostonpython.com">Boston Python</a> User Group 2014</p>
+            </div>
+        {% endblock footer %}
+    </div>
     {%- endblock body %}
   </body>
 {%- endblock html %}
